--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.0.0",
+    "react": "^17.0.0",
     "react-datepicker": "^4.7.0",
-    "react-dom": "^18.0.0",
+    "react-dom": "^17.0.0",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --verbose",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "jest": {},
+  "devDependencies": {
+    "redux-mock-store": "^1.5.4"
   }
 }
